--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "analytics",
     "stats",
     "segment.io",
+    "aws",
+    "serverless",
+    "lambda",
     "segmentio",
     "segment",
     "client",
